fix toolbar on small screen

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -33,3 +33,7 @@ input#upload {
 .ui.menu {
 	overflow-y: auto;
 }
+
+.toolbar {
+    overflow-x: hidden;
+}
